Improved performance Added motion control Added NES Emulator Added other stuff